<resources>
    <string name="app_name">ICZMP</string>
    <string name="logo_iczmp">Logo Iczmp</string>
    <string name="appName">Instytut Centrum Zdrowia Matki Polki</string>
    <string name="zaczynajmy">Zaczynajmy!</string>
    <string name="Przyczyna">Przyczyną miażdżycy jest postępujący proces zaburzenia pracy naczyń, które doprowadzają krew. W żyłach i tętnicach tworzą się blaszki miażdżycowe.\n W diagnostyce wykorzystywane są badania:</string>
    <string name="miazdzyca_diagnoza">
        <li>morfologia krwi,</li>\n
        <li>lipidogram (cholesterol i trójglicerydy),</li>\n
        <li>stężenie kreatyniny,</li>\n
        <li>tężenie mocznika, CRP,</li>\n
        <li>rezonans magnetyczny tętnic,</li>\n
        <li>tomografia komputerowa tętnic,</li>\n
        <li>badanie ultrasonograficzne z oceną dopplerowską przepływów krwi w tętnicach.</li>\n
    </string>
    <string name="miadzycaLeczenie">Często stosowanym zabiegiem jest angioplastyka. Polega na poszerzeniu naczyń krwionośnych, które zostały zwężone lub zamknięte w wyniku miażdżycy. Jest mało inwazyjną formą leczenia. W trakcie zabiegu wprowadza się stent poprzez tętnicę kończyny dolnej lub górnej, który na stałe zostaję w tętnicy wieńcowej, Innym sposobem jest leczenie chirurgiczne. Jeśli u chorego z różnych powodów nie można zastosować angioplastyki to wtedy stosuje się by-pasy.</string>
    <string name="wiek">Wiek</string>
    <string name="man">Mężczyzna</string>
    <string name="woman">Kobieta</string>
    <string name="very_severely_underweight">"Bardzo poważna niedowaga"</string>
    <string name="severely_underweight">"Ciężka niedowaga "</string>
    <string name="underweight">Niedowaga</string>
    <string name="normal">Norma</string>
    <string name="overweight">Nadwaga</string>
    <string name="obese_class_i">"Otyłość klasy I "</string>
    <string name="obese_class_ii">Otyłość klasy II</string>
    <string name="obese_class_iii">Otyłość klasy III</string>
    <string name="underweightBMI">BMI poniżej 18,5 wskazuje, że masz niedowagę, więc może być konieczne przybranie na wadze.</string>
    <string name="normalBMI">BMI wskazuje, że masz prawidłową wagę dla swojego wzrostu. Utrzymując zdrową wagę, zmniejszasz ryzyko wystąpienia poważnych problemów zdrowotnych.</string>
    <string name="overweightBMI">BMI 25-29,9 wskazuje, że masz niewielką nadwagę. Ze względów zdrowotnych mogę zalecić utratę wagi. Zaleca się skonsultowanie się z lekarzem lub dietetykiem w celu uzyskania porady.</string>
    <string name="highOverweightBMI">BMI powyżej 30 wskazuje, że masz dużą nadwagę. Twoje zdrowie może być zagrożone, jeżli nie schudniesz.</string>
    <string name="todo">todo</string>
</resources>
