<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_iczmp"
        android:layout_marginTop="25dp"
        app:srcCompat="@drawable/logo_iczmp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/appName"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        />

    <Button
        android:id="@+id/btStart"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/zaczynajmy"
        android:layout_gravity="center"
        android:fontFamily="@font/lato"
        android:layout_marginTop="250dp"
        android:textSize="15dp"
        android:padding="20dp"
        android:background="@color/blue"
        />
</LinearLayout>