<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".atherosclerosis_diagnosis">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="73dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/gradient_blue" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="72dp"
            android:layout_height="65dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="158dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="158dp"
            android:layout_marginBottom="5dp"
            app:srcCompat="@drawable/logo_iczmp" />

        <ImageView
            android:id="@+id/btBack"
            android:layout_width="52dp"
            android:layout_height="42dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="16dp"
            app:srcCompat="@drawable/ic_arrow_back" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:padding="5dp"
        android:layout_height="570dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="25dp"
                android:text="Miażdżyca - diagnostyka i leczenie"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textNews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="20sp"
                android:text="@string/Przyczyna" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:padding="15dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/miazdzyca_diagnoza" />
            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="25dp"
                android:text="Jakie są formy leczenia?"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="25sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:padding="10dp"
                android:text="@string/miadzycaLeczenie"

                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>